# opengl-exercise

./: .gitignore  ReadMe.md
Resources/: cube-textured.mtl  cube.3ds  cube.dds  fragmentShader.frag  scene1.mtl  vertexShader.vert
src/: .gitignore  CMakeLists.txt  MainTypes.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  main.cpp  opengl-exercise.pro  types.h
src/Global/: CMakeLists.txt  structs.h
src/Graphics/: CMakeLists.txt  Camera.h  DefaultShader.cpp  DefaultShader.h  Graphics.cpp  Graphics.h  GraphicsObject.cpp  GraphicsObject.h  GraphicsTypes.h  Light.h  Material.cpp  Material.h  RenderComponent.cpp  RenderComponent.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  glwidget.cpp  glwidget.h  types.h
src/Physics/: CMakeLists.txt  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsTypes.h  World.cpp  World.h
src/Resources/: cube.dae  cube.fbx  cube1.dae  fragmentShader.frag  vertexShader.vert  world.blend
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneTypes.h
src/Tools/: CMakeLists.txt  FileReader.cpp  FileReader.h  materialfileparser.cpp  materialfileparser.h  objectfileparser.cpp  objectfileparser.h  structs.h
src/cmake/Modules/: FindASSIMP.cmake  FindSOIL.cmake
